Поле количества у маленьких  карточек

--- a/templates/brand.html
+++ b/templates/brand.html
@@ -99,13 +99,7 @@
 									</div>
 									<div class="catalog-item-count">
 										<div class="fs11">Кол-во</div>
-										<select class="select2">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-											<option>4</option>
-											<option>5</option>
-										</select>
+										<input type="text" class="qty" value="1"/>
 									</div>
 								</div>	
 								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -137,13 +131,7 @@
 									</div>
 									<div class="catalog-item-count">
 										<div class="fs11">Кол-во</div>
-										<select class="select2">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-											<option>4</option>
-											<option>5</option>
-										</select>
+										<input type="text" class="qty" value="1"/>
 									</div>
 								</div>	
 								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -199,13 +187,7 @@
 									</div>
 									<div class="catalog-item-count">
 										<div class="fs11">Кол-во</div>
-										<select class="select2">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-											<option>4</option>
-											<option>5</option>
-										</select>
+										<input type="text" class="qty" value="1"/>
 									</div>
 								</div>	
 								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -237,13 +219,7 @@
 									</div>
 									<div class="catalog-item-count">
 										<div class="fs11">Кол-во</div>
-										<select class="select2">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-											<option>4</option>
-											<option>5</option>
-										</select>
+										<input type="text" class="qty" value="1"/>
 									</div>
 								</div>	
 								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -275,13 +251,7 @@
 									</div>
 									<div class="catalog-item-count">
 										<div class="fs11">Кол-во</div>
-										<select class="select2">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-											<option>4</option>
-											<option>5</option>
-										</select>
+										<input type="text" class="qty" value="1"/>
 									</div>
 								</div>	
 								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -313,13 +283,7 @@
 									</div>
 									<div class="catalog-item-count">
 										<div class="fs11">Кол-во</div>
-										<select class="select2">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-											<option>4</option>
-											<option>5</option>
-										</select>
+										<input type="text" class="qty" value="1"/>
 									</div>
 								</div>	
 								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -351,13 +315,7 @@
 									</div>
 									<div class="catalog-item-count">
 										<div class="fs11">Кол-во</div>
-										<select class="select2">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-											<option>4</option>
-											<option>5</option>
-										</select>
+										<input type="text" class="qty" value="1"/>
 									</div>
 								</div>	
 								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -389,13 +347,7 @@
 									</div>
 									<div class="catalog-item-count">
 										<div class="fs11">Кол-во</div>
-										<select class="select2">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-											<option>4</option>
-											<option>5</option>
-										</select>
+										<input type="text" class="qty" value="1"/>
 									</div>
 								</div>	
 								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -427,13 +379,7 @@
 									</div>
 									<div class="catalog-item-count">
 										<div class="fs11">Кол-во</div>
-										<select class="select2">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-											<option>4</option>
-											<option>5</option>
-										</select>
+										<input type="text" class="qty" value="1"/>
 									</div>
 								</div>	
 								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -465,13 +411,7 @@
 									</div>
 									<div class="catalog-item-count">
 										<div class="fs11">Кол-во</div>
-										<select class="select2">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-											<option>4</option>
-											<option>5</option>
-										</select>
+										<input type="text" class="qty" value="1"/>
 									</div>
 								</div>	
 								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -503,13 +443,7 @@
 									</div>
 									<div class="catalog-item-count">
 										<div class="fs11">Кол-во</div>
-										<select class="select2">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-											<option>4</option>
-											<option>5</option>
-										</select>
+										<input type="text" class="qty" value="1"/>
 									</div>
 								</div>	
 								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
