--- a/templates/search_result.html
+++ b/templates/search_result.html
@@ -134,13 +134,7 @@
 									</div>
 									<div class="catalog-item-count">
 										<div class="fs11">Кол-во</div>
-										<select class="select2">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-											<option>4</option>
-											<option>5</option>
-										</select>
+										<input type="text" class="qty" value="1"/>
 									</div>
 								</div>	
 								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -172,13 +166,7 @@
 									</div>
 									<div class="catalog-item-count">
 										<div class="fs11">Кол-во</div>
-										<select class="select2">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-											<option>4</option>
-											<option>5</option>
-										</select>
+										<input type="text" class="qty" value="1"/>
 									</div>
 								</div>	
 								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -210,13 +198,7 @@
 									</div>
 									<div class="catalog-item-count">
 										<div class="fs11">Кол-во</div>
-										<select class="select2">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-											<option>4</option>
-											<option>5</option>
-										</select>
+										<input type="text" class="qty" value="1"/>
 									</div>
 								</div>	
 								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -248,13 +230,7 @@
 									</div>
 									<div class="catalog-item-count">
 										<div class="fs11">Кол-во</div>
-										<select class="select2">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-											<option>4</option>
-											<option>5</option>
-										</select>
+										<input type="text" class="qty" value="1"/>
 									</div>
 								</div>	
 								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -286,14 +262,7 @@
 									</div>
 									<div class="catalog-item-count">
 										<div class="fs11">Кол-во</div>
-										<select class="select2">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-											<option>4</option>
-											<option>5</option>
-										</select>
-									</div>
+										<input type="text" class="qty" value="1"/>
 								</div>	
 								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
 								<div class="catalog-item-category">
@@ -324,13 +293,7 @@
 									</div>
 									<div class="catalog-item-count">
 										<div class="fs11">Кол-во</div>
-										<select class="select2">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-											<option>4</option>
-											<option>5</option>
-										</select>
+										<input type="text" class="qty" value="1"/>
 									</div>
 								</div>	
 								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -362,13 +325,7 @@
 									</div>
 									<div class="catalog-item-count">
 										<div class="fs11">Кол-во</div>
-										<select class="select2">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-											<option>4</option>
-											<option>5</option>
-										</select>
+										<input type="text" class="qty" value="1"/>
 									</div>
 								</div>	
 								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -400,13 +357,7 @@
 									</div>
 									<div class="catalog-item-count">
 										<div class="fs11">Кол-во</div>
-										<select class="select2">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-											<option>4</option>
-											<option>5</option>
-										</select>
+										<input type="text" class="qty" value="1"/>
 									</div>
 								</div>	
 								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -438,13 +389,7 @@
 									</div>
 									<div class="catalog-item-count">
 										<div class="fs11">Кол-во</div>
-										<select class="select2">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-											<option>4</option>
-											<option>5</option>
-										</select>
+										<input type="text" class="qty" value="1"/>
 									</div>
 								</div>	
 								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
