--- a/templates/catalog_breed.html
+++ b/templates/catalog_breed.html
@@ -90,13 +90,7 @@
 									</div>
 									<div class="catalog-item-count">
 										<div class="fs11">Кол-во</div>
-										<select class="select2">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-											<option>4</option>
-											<option>5</option>
-										</select>
+										<input type="text" class="qty" value="1"/>
 									</div>
 								</div>	
 								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -128,13 +122,7 @@
 									</div>
 									<div class="catalog-item-count">
 										<div class="fs11">Кол-во</div>
-										<select class="select2">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-											<option>4</option>
-											<option>5</option>
-										</select>
+										<input type="text" class="qty" value="1"/>
 									</div>
 								</div>	
 								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -166,13 +154,7 @@
 									</div>
 									<div class="catalog-item-count">
 										<div class="fs11">Кол-во</div>
-										<select class="select2">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-											<option>4</option>
-											<option>5</option>
-										</select>
+										<input type="text" class="qty" value="1"/>
 									</div>
 								</div>	
 								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -213,13 +195,7 @@
 									</div>
 									<div class="catalog-item-count">
 										<div class="fs11">Кол-во</div>
-										<select class="select2">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-											<option>4</option>
-											<option>5</option>
-										</select>
+										<input type="text" class="qty" value="1"/>
 									</div>
 								</div>	
 								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -251,13 +227,7 @@
 									</div>
 									<div class="catalog-item-count">
 										<div class="fs11">Кол-во</div>
-										<select class="select2">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-											<option>4</option>
-											<option>5</option>
-										</select>
+										<input type="text" class="qty" value="1"/>
 									</div>
 								</div>	
 								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -289,13 +259,7 @@
 									</div>
 									<div class="catalog-item-count">
 										<div class="fs11">Кол-во</div>
-										<select class="select2">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-											<option>4</option>
-											<option>5</option>
-										</select>
+										<input type="text" class="qty" value="1"/>
 									</div>
 								</div>	
 								<div class="btn-cont"><a href="" class="btn">Купить</a></div>
