--- a/templates/filter.html
+++ b/templates/filter.html
@@ -176,13 +176,7 @@
 								</div>
 								<div class="catalog-item-count">
 									<div class="fs11">Кол-во</div>
-									<select class="select2">
-										<option>1</option>
-										<option>2</option>
-										<option>3</option>
-										<option>4</option>
-										<option>5</option>
-									</select>
+									<input type="text" class="qty" value="1"/>
 								</div>
 							</div>
 							<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -214,13 +208,7 @@
 								</div>
 								<div class="catalog-item-count">
 									<div class="fs11">Кол-во</div>
-									<select class="select2">
-										<option>1</option>
-										<option>2</option>
-										<option>3</option>
-										<option>4</option>
-										<option>5</option>
-									</select>
+									<input type="text" class="qty" value="1"/>
 								</div>
 							</div>
 							<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -252,13 +240,7 @@
 								</div>
 								<div class="catalog-item-count">
 									<div class="fs11">Кол-во</div>
-									<select class="select2">
-										<option>1</option>
-										<option>2</option>
-										<option>3</option>
-										<option>4</option>
-										<option>5</option>
-									</select>
+									<input type="text" class="qty" value="1"/>
 								</div>
 							</div>
 							<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -290,13 +272,7 @@
 								</div>
 								<div class="catalog-item-count">
 									<div class="fs11">Кол-во</div>
-									<select class="select2">
-										<option>1</option>
-										<option>2</option>
-										<option>3</option>
-										<option>4</option>
-										<option>5</option>
-									</select>
+									<input type="text" class="qty" value="1"/>
 								</div>
 							</div>
 							<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -328,13 +304,7 @@
 								</div>
 								<div class="catalog-item-count">
 									<div class="fs11">Кол-во</div>
-									<select class="select2">
-										<option>1</option>
-										<option>2</option>
-										<option>3</option>
-										<option>4</option>
-										<option>5</option>
-									</select>
+									<input type="text" class="qty" value="1"/>
 								</div>
 							</div>
 							<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -366,13 +336,7 @@
 								</div>
 								<div class="catalog-item-count">
 									<div class="fs11">Кол-во</div>
-									<select class="select2">
-										<option>1</option>
-										<option>2</option>
-										<option>3</option>
-										<option>4</option>
-										<option>5</option>
-									</select>
+									<input type="text" class="qty" value="1"/>
 								</div>
 							</div>
 							<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -404,13 +368,7 @@
 								</div>
 								<div class="catalog-item-count">
 									<div class="fs11">Кол-во</div>
-									<select class="select2">
-										<option>1</option>
-										<option>2</option>
-										<option>3</option>
-										<option>4</option>
-										<option>5</option>
-									</select>
+									<input type="text" class="qty" value="1"/>
 								</div>
 							</div>
 							<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -442,13 +400,7 @@
 								</div>
 								<div class="catalog-item-count">
 									<div class="fs11">Кол-во</div>
-									<select class="select2">
-										<option>1</option>
-										<option>2</option>
-										<option>3</option>
-										<option>4</option>
-										<option>5</option>
-									</select>
+									<input type="text" class="qty" value="1"/>
 								</div>
 							</div>
 							<div class="btn-cont"><a href="" class="btn">Купить</a></div>
@@ -480,13 +432,7 @@
 								</div>
 								<div class="catalog-item-count">
 									<div class="fs11">Кол-во</div>
-									<select class="select2">
-										<option>1</option>
-										<option>2</option>
-										<option>3</option>
-										<option>4</option>
-										<option>5</option>
-									</select>
+									<input type="text" class="qty" value="1"/>
 								</div>
 							</div>
 							<div class="btn-cont"><a href="" class="btn">Купить</a></div>
