--- a/templates/includes/_catalog-item.html
+++ b/templates/includes/_catalog-item.html
@@ -18,13 +18,7 @@
         </div>
         <div class="catalog-item-count">
             <div class="fs11">Кол-во</div>
-            <select class="select2">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
-            </select>
+            <input type="text" class="qty" value="1"/>
         </div>
     </div>
     <div class="btn-cont"><a href="" class="btn">Купить</a></div>
