--- a/templates/includes/_card_tabs.html
+++ b/templates/includes/_card_tabs.html
@@ -264,7 +264,7 @@
                     <textarea class="fs11 def" id="r3" placeholder="Что вам понравилось и не понравилось в продукте? Как долго вы его используете? Соотношение цена-качество?"></textarea>
                     
                     <div class="mb20">
-                        Вы будете рекомендовать товар друзьям? <a href="" class="recom" title="Да, буду"></a><a href="" class="no-recom" title="Нет, не буду"></a>
+                        Вы будете рекомендовать товар друзьям? <span class="recom recom_yes" title="Да, буду"></span><span class="recom recom_no" title="Нет, не буду"></span>
                     </div>
                     <div class="mb30">
                         <a href="" class="btn review-submit p50">Добавить отзыв</a>
