--- a/templates/includes/_card_photo.html
+++ b/templates/includes/_card_photo.html
@@ -1,5 +1,5 @@
 <div class="card-photo-block">
-    <div class="bxslider-photo-border">
+    <div class="card-photo-cont bxslider-photo-border">
         <div class="bxslider-photo">
             <a class="photo-slide fancybox-gal" href="static/images/upload/p1-big.jpg" rel="product-gal"><img src="static/images/upload/p11.jpg" alt="" data-zoom-image="static/images/upload/p1-big.jpg" /></a>
             <a class="photo-slide fancybox-gal" href="static/images/upload/p2-big.jpg" rel="product-gal"><img src="static/images/upload/p12.jpg" alt="" data-zoom-image="static/images/upload/p2-big.jpg" /></a>
