--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -1,3 +1,5 @@
+//= _log_reg_layers.html
+
 <div class="search-bottom">
     <div class="width float-cont">
         <div class="search-bottom-txt">
@@ -169,13 +171,10 @@
 <div class="layer" id="layer-quickview">
 	<div class="p20 qv-layer float-cont">
 		<div class="card-photo-block">
-			<div class="bxslider-photo-border">
+			<div class="quickview-photo-cont bxslider-photo-border">
 				<div class="bxslider-photo no-zoom">
-					<a class="photo-slide"><img src="static/images/upload/p11.jpg" alt=""/></a>
-					<a class="photo-slide"><img src="static/images/upload/p12.jpg" alt=""/></a>
-					<a class="photo-slide"><img src="static/images/upload/p11.jpg" alt=""/></a>
-					<a class="photo-slide"><img src="static/images/upload/p12.jpg" alt=""/></a>
-					<a class="photo-slide"><img src="static/images/upload/p13.jpg" alt=""/></a>
+					<a class="photo-slide fancybox-gal" href="static/images/upload/p1-big.jpg" rel="quick-gal"><img src="static/images/upload/p11.jpg" data-zoom-image="static/images/upload/p1-big.jpg" alt=""/></a>
+					<a class="photo-slide fancybox-gal" href="static/images/upload/p2-big.jpg" rel="quick-gal"><img src="static/images/upload/p12.jpg" data-zoom-image="static/images/upload/p2-big.jpg" alt=""/></a>
 				</div>
 				<div class="bx-arrow-left"></div>
 				<div class="bx-arrow-right"></div>
