--- a/templates/includes/_header.html
+++ b/templates/includes/_header.html
@@ -53,7 +53,7 @@
                     <div class="hint">Например, <a href="">Royal Canin Urban Life</a></div>
                 </form>
                 <div class="shop-block">
-                    <div class="cab-link"><a href="">Личный кабинет</a></div>
+                    <div class="cab-link"><a href="#layer-login" class="fancybox">Личный кабинет</a></div>
                     <div class="shop-cart float-cont">
                         <div class="fleft">
                             <img src="static/images/ico/orange-cart.png" alt="" class="shop-cart-img"/>
