--- a/templates/includes/_accaunt.html
+++ b/templates/includes/_accaunt.html
@@ -13,7 +13,7 @@
         <div class="form_group">
             <label for="phone1" class="form_label">Мобильный телефон:</label>
             <div class="tip-wrap">
-                <input type="text" id="phone1" class="form_text phone-mask" placeholder="+7" />
+                <input type="text" id="phone1" class="form_text phone-mask" placeholder="+7 (111) 111-11-11" />
                 <div class="tip tip_inside">Телефон нужен: для подтверждения заказа оператором, для восстановления пароля и для информации о статусе заказа по SMS. Используйте телефон для входа как логин.</div>
             </div>
         </div>
