--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -66,7 +66,7 @@
         </div>
         <div class="f-contacts">
             <div class="h4 black">Свяжитесь с нами</div>
-            <div class="ph">+7(495)111-11-11</div>
+            <div class="ph">+7 (495) 111-11-11</div>
             <div class="mb20 fs13"><a href="mailto:shop@teenyweeny.ru">shop@teenyweeny.ru</a></div>
             <div class="mb20"><a href=""><img src="static/images/upload/ya.png" alt="" class="img-block"/></a></div>
             <div><img src="static/images/ico/cards-small.png" alt=""/></div>
@@ -126,7 +126,7 @@
 		<div class="layer-note">Укажите телефон, на который<br/>нужно перезвонить.</div>
 		<form>
 			<div class="label"><label for="f1">Телефон*:</label></div>
-			<input type="tel" class="def-input phone-mask" placeholder="+7" id="f1"/>
+			<input type="tel" class="def-input phone-mask" placeholder="+7 (111) 111-11-11" id="f1"/>
 			<div class="label"><label for="f2">Имя*:</label></div>
 			<input type="text" class="def-input" placeholder="" id="f2"/>
 			<div class="sub-cont"><input type="submit" class="btn btn_block" value="Заказать звонок"/></div>
@@ -154,7 +154,7 @@
 
 			<div class="layer-note2">
 				Или позвоните по телефону: 
-				<div class="h3 mb0">+7(495)111-11-11</div>
+				<div class="h3 mb0">+7 (495) 111-11-11</div>
 			</div>
 		</form>
 	</div>
@@ -235,7 +235,7 @@
 		<div class="layer-note">Менедер свяжется с вами, чтобы оформить заказ по телефону.</div>
 		<form>
 			<div class="label"><label for="f100">Телефон*:</label></div>
-			<input type="tel" class="def-input phone-mask" placeholder="+7" id="f100"/>
+			<input type="tel" class="def-input phone-mask" placeholder="+7 (111) 111-11-11" id="f100"/>
 			<div class="label"><label for="f200">Имя*:</label></div>
 			<input type="text" class="def-input" placeholder="" id="f200"/>
 			<div class="sub-cont"><input type="submit" class="btn btn_block" value="Ожидаю звонок"/></div>
