--- a/templates/ordering.html
+++ b/templates/ordering.html
@@ -14,7 +14,7 @@
                             <div class="tip tip_atop tip_atop_r">Телефон нужен, чтобы менеджер связался с вами и подтвердил заказ</div>
                         </span>
                     </label>
-                    <input type="text" id="phone" class="form_text phone-mask" placeholder="+7"  />
+                    <input type="text" id="phone" class="form_text phone-mask" placeholder="+7 (111) 111-11-11"  />
                 </div>
                 <div class="form_group">
                     <label for="email" class="form_label">
