--- a/templates/card_not_avaliable.html
+++ b/templates/card_not_avaliable.html
@@ -74,7 +74,7 @@
 			<div class="label"><label for="f205">На e-mail:</label></div>
 			<input type="text" class="def-input" placeholder="" id="f205"/>
 			<div class="label"><label for="f105">По SMS:</label></div>
-			<input type="tel" class="def-input phone-mask" placeholder="+7" id="f105"/>
+			<input type="tel" class="def-input phone-mask" placeholder="+7 (111) 111-11-11" id="f105"/>
 			<div class="sub-cont"><input type="submit" class="btn btn_block" value="Сообщить"/></div>
 		</form>
 	</div>
