--- a/templates/includes/_mail.html
+++ b/templates/includes/_mail.html
@@ -8,7 +8,7 @@
         </div>
         <div class="form_group">
             <label for="phone2" class="form_label">Мобильный телефон:</label>
-            <input type="text" id="phone2" class="form_text phone-mask" placeholder="+7"  /></div>
+            <input type="text" id="phone2" class="form_text phone-mask" placeholder="+7 (111) 111-11-11"  /></div>
         <div class="form_group mb0">
             <input type="submit" class="btn btn_block" value="Сохранить" />
         </div>
