--- a/templates/ordering_success.html
+++ b/templates/ordering_success.html
@@ -37,7 +37,7 @@
                             <div class="tip tip_atop tip_atop_r">Телефон нужен чтобы менеджер связался с вами и подтвердил заказ</div>
                         </span>
                 </label>
-                <input type="text" id="phone" class="form_text phone-mask" placeholder="+7"  />
+                <input type="text" id="phone" class="form_text phone-mask" placeholder="+7 (111) 111-11-11"  />
             </div>
             <div class="form_group_full">
                 <div class="form_inline form_inline_middle form_group">
