В быстром просмотре зума не будет

--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -173,8 +173,8 @@
 		<div class="card-photo-block">
 			<div class="quickview-photo-cont bxslider-photo-border">
 				<div class="bxslider-photo no-zoom">
-					<a class="photo-slide fancybox-gal" href="static/images/upload/p1-big.jpg" rel="quick-gal"><img src="static/images/upload/p11.jpg" data-zoom-image="static/images/upload/p1-big.jpg" alt=""/></a>
-					<a class="photo-slide fancybox-gal" href="static/images/upload/p2-big.jpg" rel="quick-gal"><img src="static/images/upload/p12.jpg" data-zoom-image="static/images/upload/p2-big.jpg" alt=""/></a>
+					<a class="photo-slide fancybox-gal" href="static/images/upload/p1-big.jpg" rel="quick-gal"><img src="static/images/upload/p11.jpg" alt=""/></a>
+					<a class="photo-slide fancybox-gal" href="static/images/upload/p2-big.jpg" rel="quick-gal"><img src="static/images/upload/p12.jpg" alt=""/></a>
 				</div>
 				<div class="bx-arrow-left"></div>
 				<div class="bx-arrow-right"></div>
