--- a/static/scss/_popups.scss
+++ b/static/scss/_popups.scss
@@ -4,13 +4,18 @@
 }
 .popup-layer {
   position: absolute;
-  left: 0;
   box-shadow: 0 5px 7px 1px rgba(0,0,0,0.25);
   background: $color-white;
   border-radius: 5px;
-  width: 400px;
   z-index: 1000;
   display: none;
+
+  &:before {
+    content: '';
+    position: absolute;
+    top: -20px;
+    border: 10px solid transparent;
+  }
 }
 .popup-inner {
   padding: 20px;
@@ -27,11 +32,28 @@
 .popup-close:hover {
   background-position: left bottom;
 }
-.popup-corner {
-  position: absolute;
-  width: 18px;
-  height: 11px;
-  background: url(../images/ico/popup-corner.png) no-repeat;
-  top: -8px;
-  left: 20px;
+
+.popup_breed {
+  width: 400px;
+  left: 0;
+
+  &:before {
+    left: 20px;
+    border-bottom-color: $color-white;
+  }
+}
+.popup_colored {
+  border-top: 3px solid $color-link-blue;
+
+  &:before {
+    top: -23px;
+    border-bottom-color: $color-link-blue;
+  }
+}
+.popup_city {
+  width: 900px;
+
+  &:before {
+    left: 100px;
+  }
 }
