--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -12,7 +12,7 @@
 			<div class="breed-cont popup-cont tip-wrap">
 				<a href="#" class="popup-btn btn_big btn breed-btn tip-init" data-yoffset="50">Выбрать породу</a>
 				<div class="tip tip_atop tip_atop_r">У нас есть специальные товары для некоторых пород. Выберите породу и посмотрите!</div>
-				<div class="popup-layer">
+				<div class="popup-layer popup_breed">
 					<div class="popup-inner">
 						<form>
 							Любимая порода
@@ -32,7 +32,6 @@
 						</form>
 					</div>
 					<div class="popup-close"></div>
-					<div class="popup-corner"></div>
 				</div>
 			</div>
 
