--- a/templates/catalog_breed.html
+++ b/templates/catalog_breed.html
@@ -12,7 +12,7 @@
 				<div class="breed-cont popup-cont tip-wrap">
 					<a href="#" class="popup-btn btn_big btn breed-btn tip-init active" data-yoffset="50">Малая аппенинская гончая</a>
 					<div class="tip tip_atop tip_atop_r">Мы отобрали товары специально для этой породы!</div>
-					<div class="popup-layer">
+					<div class="popup-layer popup_breed">
 						<div class="popup-inner">
 							<form>
 								Любимая порода
@@ -32,7 +32,6 @@
 							</form>
 						</div>
 						<div class="popup-close"></div>
-						<div class="popup-corner"></div>
 					</div>
 				</div>
 
