--- a/templates/filter.html
+++ b/templates/filter.html
@@ -22,7 +22,7 @@
 			<div class="breed-cont popup-cont tip-wrap">
 				<a href="#" class="popup-btn btn_big btn breed-btn tip-init" data-yoffset="50">Выбрать породу</a>
 				<div class="tip tip_atop tip_atop_r">У нас есть специальные товары для некоторых пород. Выберите породу и посмотрите!</div>
-				<div class="popup-layer">
+				<div class="popup-layer popup_breed">
 					<div class="popup-inner">
 						<form>
 							Любимая порода
@@ -42,7 +42,6 @@
 						</form>
 					</div>
 					<div class="popup-close"></div>
-					<div class="popup-corner"></div>
 				</div>
 			</div>
 			<div class="level-up"><a href="">Каталог для собак</a></div>
