--- a/templates/catalog_breed.html
+++ b/templates/catalog_breed.html
@@ -10,7 +10,7 @@
 		<div class="float-cont">
 			<div class="sidebar fleft">
 				<div class="breed-cont popup-cont tip-wrap">
-					<a href="#" class="popup-btn btn_big btn breed-btn tip-init active" data-yoffset="50">Малая аппенинская гончая</a>
+					<a href="#" class="popup-btn btn_big btn breed-btn tip-init active" data-top-offset="50">Малая аппенинская гончая</a>
 					<div class="tip tip_atop tip_atop_r">Мы отобрали товары специально для этой породы!</div>
 					<div class="popup-layer popup_breed">
 						<div class="popup-inner">
