--- a/static/scss/_promo.scss
+++ b/static/scss/_promo.scss
@@ -58,7 +58,7 @@ a.promo-img:hover .go {
 }
 .go {
   display: inline-block;
-  background: url(../images/ico/ar-white.png) no-repeat right center;
+  background: url(../images/ico/ar-white-right.png) no-repeat right center;
   padding-right: 13px;
   color: $color-white;
   font-size: 11px;
