--- a/static/css/jquery-ui-1.10.4.custom.css
+++ b/static/css/jquery-ui-1.10.4.custom.css
@@ -86,6 +86,8 @@
 	width: 100%;
 	height: 100%;
 }
+
+/* Slider */
 .ui-slider {
 	position: relative;
 	text-align: left;
@@ -170,10 +172,82 @@
 	top: 0;
 }
 
+/* Datepicker */
+.ui-datepicker {
+	width: 17em;
+	padding: .2em .2em 0;
+	border: 1px solid #c3c3c3;
+	background: #f7f7f7;
+	display: none;
+}
+.ui-datepicker .ui-datepicker-header {
+	position: relative;
+	padding: .2em 0;
+	border: 1px solid #ffbf3f;
+	background: #ffbf3f;
+}
+.ui-datepicker .ui-datepicker-prev,
+.ui-datepicker .ui-datepicker-next {
+	position: absolute;
+	top: 2px;
+	width: 1.8em;
+	height: 1.8em;
+	cursor: pointer;
+}
+.ui-datepicker .ui-datepicker-prev {
+	left: 2px;
+}
+.ui-datepicker .ui-datepicker-next {
+	right: 2px;
+}
+.ui-datepicker .ui-datepicker-prev span,
+.ui-datepicker .ui-datepicker-next span {
+	display: block;
+	width: 7px;
+	height: 10px;
+	position: absolute;
+	left: 50%;
+	margin-left: -3px;
+	top: 50%;
+	margin-top: -5px;
+}
+.ui-datepicker .ui-datepicker-prev span {
+	background: url(../images/ico/ar-white-left.png);
+}
+.ui-datepicker .ui-datepicker-next span {
+	background: url(../images/ico/ar-white-right.png);
+}
+.ui-datepicker .ui-datepicker-title {
+	margin: 0 2.3em;
+	line-height: 1.8em;
+	text-align: center;
+}
+.ui-datepicker table {
+	width: 100%;
+	font-size: .9em;
+	border-collapse: collapse;
+	margin: 0 0 .4em;
+}
+.ui-datepicker th {
+	padding: .7em .3em;
+	text-align: center;
+	border: 0;
+}
+.ui-datepicker td {
+	border: 0;
+	padding: 1px;
+}
+.ui-datepicker td span,
+.ui-datepicker td a {
+	display: block;
+	padding: .2em;
+	text-align: right;
+	text-decoration: none;
+}
+
 /* Component containers
 ----------------------------------*/
 .ui-widget {
-	font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
 	font-size: 1.1em;
 }
 .ui-widget .ui-widget {
@@ -183,58 +257,83 @@
 .ui-widget select,
 .ui-widget textarea,
 .ui-widget button {
-	font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
 	font-size: 1em;
 }
 .ui-widget-content a {
-	color: #333333;
+	color: #333;
 }
 .ui-widget-header {
-	border: 1px solid #e78f08;
-	color: #ffffff;
-	font-weight: bold;
+	border: 1px solid #e78800;
+	color: #fff;
 }
 .ui-widget-header a {
-	color: #ffffff;
+	color: #fff;
 }
 
+/* Interaction states
+----------------------------------*/
+.ui-state-default,
+.ui-widget-content .ui-state-default,
+.ui-widget-header .ui-state-default {
+	border: 1px solid #ccc;
+	background: #eceaea;
+	color: #1c94c4;
+}
+.ui-state-default a,
+.ui-state-default a:link,
+.ui-state-default a:visited {
+	color: #35c1ea;
+	text-decoration: none;
+}
+.ui-state-active,
+.ui-widget-content .ui-state-active,
+.ui-widget-header .ui-state-active {
+	background: #fff;
+	color: #ffbf3f;
+}
+.ui-state-active a,
+.ui-state-active a:link,
+.ui-state-active a:visited {
+	color: #ffbf3f;
+	text-decoration: none;
+}
 
 /* Corner radius */
 .ui-corner-all,
 .ui-corner-top,
 .ui-corner-left,
 .ui-corner-tl {
-	border-top-left-radius: 4px;
+	border-top-left-radius: 5px;
 }
 .ui-corner-all,
 .ui-corner-top,
 .ui-corner-right,
 .ui-corner-tr {
-	border-top-right-radius: 4px;
+	border-top-right-radius: 5px;
 }
 .ui-corner-all,
 .ui-corner-bottom,
 .ui-corner-left,
 .ui-corner-bl {
-	border-bottom-left-radius: 4px;
+	border-bottom-left-radius: 5px;
 }
 .ui-corner-all,
 .ui-corner-bottom,
 .ui-corner-right,
 .ui-corner-br {
-	border-bottom-right-radius: 4px;
+	border-bottom-right-radius: 5px;
 }
 
 /* Overlays */
 .ui-widget-overlay {
-	background: #666666 url("images/ui-bg_diagonals-thick_20_666666_40x40.png") 50% 50% repeat;
+	background: #666;
 	opacity: .5;
 	filter: Alpha(Opacity=50);
 }
 .ui-widget-shadow {
 	margin: -5px 0 0 -5px;
 	padding: 5px;
-	background: #000000 url("images/ui-bg_flat_10_000000_40x100.png") 50% 50% repeat-x;
+	background: #000;
 	opacity: .2;
 	filter: Alpha(Opacity=20);
 	border-radius: 5px;
