--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -27,7 +27,7 @@
                     <div class="contact_item mail mb25">
                         <p class="semibold">Напишите нам</p>
                         <p class="mb10">Мы ответим на ваши вопросы так быстро, как только сможем</p>
-                        <a href="#" class="blue dashed">Задать вопрос</a>
+                        <a href="mailto:info@teenyweeny.ru" class="blue dashed">Задать вопрос</a>
                     </div>
                     <div class="mb25">
                         <p class="semibold mb5">Дополнительные вопросы</p>
