--- a/static/css/jquery-ui-1.10.4.custom.css
+++ b/static/css/jquery-ui-1.10.4.custom.css
@@ -85,6 +85,96 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
+	background: #666;
+	opacity: .5;
+	filter: Alpha(Opacity=50);
+}
+.ui-widget-shadow {
+	margin: -5px 0 0 -5px;
+	padding: 5px;
+	background: #000;
+	opacity: .2;
+	filter: Alpha(Opacity=20);
+	border-radius: 5px;
+}
+
+/* Component containers
+----------------------------------*/
+.ui-widget {
+	font-size: 1.1em;
+}
+.ui-widget .ui-widget {
+	font-size: 1em;
+}
+.ui-widget input,
+.ui-widget select,
+.ui-widget textarea,
+.ui-widget button {
+	font-size: 1em;
+}
+.ui-widget-content a {
+	color: #333;
+}
+.ui-widget-header {
+	border: 1px solid #e78800;
+	color: #fff;
+}
+.ui-widget-header a {
+	color: #fff;
+}
+
+/* Interaction states
+----------------------------------*/
+.ui-state-default,
+.ui-widget-content .ui-state-default,
+.ui-widget-header .ui-state-default {
+	border: 1px solid #ccc;
+	background: #eceaea;
+	color: #1c94c4;
+}
+.ui-state-default a,
+.ui-state-default a:link,
+.ui-state-default a:visited {
+	color: #35c1ea;
+	text-decoration: none;
+}
+.ui-state-active,
+.ui-widget-content .ui-state-active,
+.ui-widget-header .ui-state-active {
+	background: #fff;
+	color: #ffbf3f;
+}
+.ui-state-active a,
+.ui-state-active a:link,
+.ui-state-active a:visited {
+	color: #ffbf3f;
+	text-decoration: none;
+}
+
+/* Corner radius */
+.ui-corner-all,
+.ui-corner-top,
+.ui-corner-left,
+.ui-corner-tl {
+	border-top-left-radius: 5px;
+}
+.ui-corner-all,
+.ui-corner-top,
+.ui-corner-right,
+.ui-corner-tr {
+	border-top-right-radius: 5px;
+}
+.ui-corner-all,
+.ui-corner-bottom,
+.ui-corner-left,
+.ui-corner-bl {
+	border-bottom-left-radius: 5px;
+}
+.ui-corner-all,
+.ui-corner-bottom,
+.ui-corner-right,
+.ui-corner-br {
+	border-bottom-right-radius: 5px;
 }
 
 /* Slider */
@@ -95,25 +185,56 @@
 }
 .ui-slider .ui-slider-handle {
 	position: absolute;
-	z-index: 2;
-    cursor: pointer !important;
-	width: 16px !important;
+	top:-4px !important;
+	width: 0 !important;
 	height: 32px !important;
-	cursor: default;
-    border:0 !important;
-    top:-4px !important;
-    margin-left:-8px !important;
-    text-decoration: none;
-    background: url(../images/ico/range-max.png) no-repeat;
+	margin: 0 !important;
+	border: 0 !important;
+	border-left: 1px solid #ccc !important;
+	background: url(../images/ico/range-max.png) no-repeat;
+	text-decoration: none;
+	cursor: pointer !important;
+	z-index: 2;
 }
-.ui-slider .ui-slider-handle.left-handle {
+.ui-slider .ui-slider-handle.left-handle:hover {
+	border-left-color: red !important;
+}
+.ui-slider .ui-slider-handle.right-handle:hover {
+	border-left-color: green !important;
+}
+.ui-slider .ui-slider-handle.left-handle:before,
+.ui-slider .ui-slider-handle.right-handle:before {
+	content: '';
+	width: 16px;
+	height: 21px;
+	position: absolute;
+	top: 4px;
+	background: linear-gradient(to bottom, #2fcdff 0%,#0fb1e6 100%);
+}
+.ui-slider .ui-slider-handle.left-handle:before {
+	right: -2px;
+}
+.ui-slider .ui-slider-handle.right-handle:before {
+	left: -2px;
+}
+.ui-slider .ui-slider-handle.left-handle:after,
+.ui-slider .ui-slider-handle.right-handle:after {
+	content: '';
+	width: 16px;
+	height: 32px;
+	position: absolute;
+	top: 0;
+}
+.ui-slider .ui-slider-handle.left-handle:after {
+	right: 100%;
 	background: url(../images/ico/range-min.png) no-repeat;
 }
-.slider-price .ui-slider-horizontal .ui-slider-range{
-    height:20px;
+.ui-slider .ui-slider-handle.right-handle:after {
+	left: 100%;
+	background: url(../images/ico/range-max.png) no-repeat;
 }
 .ui-slider .ui-slider-range {
-   background: #2fcdff; /* Old browsers */
+	background: #2fcdff; /* Old browsers */
 	background: -moz-linear-gradient(top,  #2fcdff 0%, #0fb1e6 100%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#2fcdff), color-stop(100%,#0fb1e6)); /* Chrome,Safari4+ */
 	background: -webkit-linear-gradient(top,  #2fcdff 0%,#0fb1e6 100%); /* Chrome10+,Safari5.1+ */
@@ -137,7 +258,7 @@
 
 .ui-slider-horizontal {
 	height: 21px;
-	background: url(../images/ico/slider-range.png) repeat-x; 
+	background: url(../images/ico/slider-range.png) repeat-x;
 }
 .ui-slider-horizontal .ui-slider-handle {
 	margin-left: -.6em;
@@ -243,98 +364,4 @@
 	padding: .2em;
 	text-align: right;
 	text-decoration: none;
-}
-
-/* Component containers
-----------------------------------*/
-.ui-widget {
-	font-size: 1.1em;
-}
-.ui-widget .ui-widget {
-	font-size: 1em;
-}
-.ui-widget input,
-.ui-widget select,
-.ui-widget textarea,
-.ui-widget button {
-	font-size: 1em;
-}
-.ui-widget-content a {
-	color: #333;
-}
-.ui-widget-header {
-	border: 1px solid #e78800;
-	color: #fff;
-}
-.ui-widget-header a {
-	color: #fff;
-}
-
-/* Interaction states
-----------------------------------*/
-.ui-state-default,
-.ui-widget-content .ui-state-default,
-.ui-widget-header .ui-state-default {
-	border: 1px solid #ccc;
-	background: #eceaea;
-	color: #1c94c4;
-}
-.ui-state-default a,
-.ui-state-default a:link,
-.ui-state-default a:visited {
-	color: #35c1ea;
-	text-decoration: none;
-}
-.ui-state-active,
-.ui-widget-content .ui-state-active,
-.ui-widget-header .ui-state-active {
-	background: #fff;
-	color: #ffbf3f;
-}
-.ui-state-active a,
-.ui-state-active a:link,
-.ui-state-active a:visited {
-	color: #ffbf3f;
-	text-decoration: none;
-}
-
-/* Corner radius */
-.ui-corner-all,
-.ui-corner-top,
-.ui-corner-left,
-.ui-corner-tl {
-	border-top-left-radius: 5px;
-}
-.ui-corner-all,
-.ui-corner-top,
-.ui-corner-right,
-.ui-corner-tr {
-	border-top-right-radius: 5px;
-}
-.ui-corner-all,
-.ui-corner-bottom,
-.ui-corner-left,
-.ui-corner-bl {
-	border-bottom-left-radius: 5px;
-}
-.ui-corner-all,
-.ui-corner-bottom,
-.ui-corner-right,
-.ui-corner-br {
-	border-bottom-right-radius: 5px;
-}
-
-/* Overlays */
-.ui-widget-overlay {
-	background: #666;
-	opacity: .5;
-	filter: Alpha(Opacity=50);
-}
-.ui-widget-shadow {
-	margin: -5px 0 0 -5px;
-	padding: 5px;
-	background: #000;
-	opacity: .2;
-	filter: Alpha(Opacity=20);
-	border-radius: 5px;
 }
