фикс слайдера + привела в порядок слои

--- a/templates/card_cloth.html
+++ b/templates/card_cloth.html
@@ -81,12 +81,4 @@
 	</div>
 
 //= includes/_footer.html
-
-//= includes/_log_reg_layers.html
-
-<div class="layer" id="layer-size">
-	<div class="layer-inner w600">
-		<h3>Таблица размеров</h3>
-		текст...
-	</div>
-</div>
+//= includes/_layer_size.html
