--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -1,5 +1,3 @@
-//= _log_reg_layers.html
-
 <div class="search-bottom">
     <div class="width float-cont">
         <div class="search-bottom-txt">
@@ -80,195 +78,13 @@
     </div>
 </div>
 
-<div class="layer" id="layer-help">
-	<div class="layer-inner w240">
-		<h3>Нужна помощь</h3>
-		<div class="help-list-item">
-			<img src="static/images/ico/h1.png" alt="" class="help-list-ico"/>
-			<div class="help-list-txt">
-				<a href="#layer-call" class="fancybox">Заказать<br/>обратный звонок</a>
-			</div>
-		</div>
-		<div class="help-list-item">
-			<img src="static/images/ico/h2.png" alt="" class="help-list-ico"/>
-			<div class="help-list-txt">
-				<a href="#layer-status" class="fancybox">Где мой заказ?</a>
-				<div class="no-bold">Узнать статус заказа</div>
-			</div>
-		</div>
-		<div class="help-list-item">
-			<img src="static/images/ico/h3.png" alt="" class="help-list-ico"/>
-			<div class="help-list-txt">
-				<a href="">Хотите вернуть покупку?</a>
-				<div class="no-bold">Инструкция по возврату</div>
-			</div>
-		</div>
-		<div class="help-list-item">
-			<img src="static/images/ico/h4.png" alt="" class="help-list-ico"/>
-			<div class="help-list-txt">
-				<a href="">Онлайн-консультант</a>
-				<div class="no-bold">Чат с менеджером</div>
-			</div>
-		</div>
-		<div class="help-list-item">
-			<img src="static/images/ico/h5.png" alt="" class="help-list-ico"/>
-			<div class="help-list-txt">
-				<a href="">Письмо директору</a>
-				<div class="no-bold">Пожелания и жалобы</div>
-			</div>
-		</div>
-	</div>
-</div>
-
-<div class="layer" id="layer-call">
-	<div class="layer-inner w240">
-		<h3>Обратный звонок</h3>
-		<div class="layer-note">Укажите телефон, на который<br/>нужно перезвонить.</div>
-		<form>
-			<div class="label"><label for="f1">Телефон*:</label></div>
-			<input type="tel" class="def-input phone-mask" placeholder="+7 (111) 111-11-11" id="f1"/>
-			<div class="label"><label for="f2">Имя*:</label></div>
-			<input type="text" class="def-input" placeholder="" id="f2"/>
-			<div class="sub-cont"><input type="submit" class="btn btn_block" value="Заказать звонок"/></div>
-		</form>
-	</div>
-</div>
-
-<div class="layer" id="layer-status">
-	<div class="layer-inner w240">
-		<h3>Статус заказа</h3>
-		<form>
-			<div class="layer-note3">Укажите номер заказа (6 цифр)</div>
-			<input type="text" class="def-input" placeholder="123456"/>
-			<div class="mb36">
-				<input type="submit" class="btn btn_block" value="Отправить"/>
-			</div>
-
-			<div class="layer-note">
-			Если вы не помните номер заказа,
-			укажите номер телефона или e-mail,
-			которые вы использовали при оформлении заказа. Ответ придет на телефон или e-mail.
-			</div>
-			<input type="text" class="def-input" placeholder="Телефон или e-mail"/>
-			<div class="mb36"><input type="submit" class="btn btn_block" value="Отправить"/></div>
-
-			<div class="layer-note2">
-				Или позвоните по телефону: 
-				<div class="h3 mb0">+7 (495) 111-11-11</div>
-			</div>
-		</form>
-	</div>
-	<div class="layer-btm1 w240">			
-		<div class="mb25">Если вы зарегистрированы на сайте,
-		вы можете отслеживать статус
-		в Личном кабинете в разделе                 
-		Мои заказы
-		</div>
-		<div><a href="" class="btn btn_block">Войти в аккаунт</a></div>
-	</div>
-</div>
-
-<div class="layer" id="layer-quickview">
-	<div class="p20 qv-layer float-cont">
-		<div class="card-photo-block">
-			<div class="quickview-photo-cont bxslider-photo-border">
-				<div class="bxslider-photo no-zoom">
-					<a class="photo-slide fancybox-gal" href="static/images/upload/p1-big.jpg" rel="quick-gal"><img src="static/images/upload/p11.jpg" alt=""/></a>
-					<a class="photo-slide fancybox-gal" href="static/images/upload/p2-big.jpg" rel="quick-gal"><img src="static/images/upload/p12.jpg" alt=""/></a>
-				</div>
-				<div class="bx-arrow-left"></div>
-				<div class="bx-arrow-right"></div>
-			</div>
-			<a href="#layer-addfav" class="fancybox card-service-item">
-				<img src="static/images/ico/orange-favorite.png" class="card-service-ico"/><span class="card-service-txt">Сохранить<br/>в избранное</span>
-			</a>
-		</div>
-		<div class="card-desc">
-			<h1>Royal Canin Maxi Junior Канин для молодых собак крупных пород 4 кг</h1>
-			<div class="card-code">Код товара: 12778</div>
-			<input type="hidden" class="prod-price-actual" value="520"/>
-			<div class="import card-complex-note">Выберите упаковку:</div>
-			<div class="card-complex-cont">
-				<div class="card-complex-item selected">
-					<div class="card-complex-bg">
-						<div class="card-complex-value">800 г</div>
-						<div class="card-complex-price">520 Р</div>
-					</div>
-					<div class="marker-avaliable">В наличии</div>
-				</div>
-				<div class="card-complex-item">
-					<div class="card-complex-bg">
-						<div class="card-complex-value">3,5 кг</div>
-						<div class="card-complex-price">2540 Р</div>
-					</div>
-					<div class="marker-avaliable">В наличии</div>
-				</div>
-				<div class="card-complex-item no-aval">
-					<div class="card-complex-bg">
-						<div class="card-complex-value">5 кг</div>
-						<div class="card-complex-price">3600 Р</div>
-					</div>
-					<div class="marker-no-avaliable">Нет<br/>в наличии</div>
-				</div>
-			</div>
-			<div class="card-short-desc">Корм для щенков с с высоким содержанием животного протеина и малым количеством углеводов. Описание продукта, которое есть на вкладке "Описание" в полной карточке.</div>
-			<div class="card-count">
-				Количество <span class="count-dec"></span><input type="text" class="card-count-input" value="1"/><span class="count-inc"></span>
-			</div>
-			<div class="card-total">
-				Цена: <span class="total-value">1080</span> руб  <span class="total-desc">(520 х <span class="counter-value">2</span>)</span>
-			</div>
-			<div>
-				<div class="linkcard-cont">
-					<a href="" class="btn btn-buy btn_block">В корзину</a>
-					<a href="card_complex.html" class="related-suggest">Карточка товара</a>
-				</div>
-				<a href="#layer-click" class="fancybox semibold lh40">Купить в 1 клик</a>
-			</div>
-		</div>
-	</div>
-</div>
-
-<div class="layer" id="layer-click">
-	<div class="layer-inner w240">
-		<h3>Купить в 1 клик</h3>
-		<div class="layer-note">Менедер свяжется с вами, чтобы оформить заказ по телефону.</div>
-		<form>
-			<div class="label"><label for="f100">Телефон*:</label></div>
-			<input type="tel" class="def-input phone-mask" placeholder="+7 (111) 111-11-11" id="f100"/>
-			<div class="label"><label for="f200">Имя*:</label></div>
-			<input type="text" class="def-input" placeholder="" id="f200"/>
-			<div class="sub-cont"><input type="submit" class="btn btn_block" value="Ожидаю звонок"/></div>
-		</form>
-	</div>
-</div>
-
-<div class="layer" id="layer-addfav">
-	<div class="layer-inner w240">
-		<h3>Выберите список</h3>
-		<form>
-			<div class="new-list-cont">
-				<input type="text" class="def-input" placeholder="Создать новый"/>
-				<input type="submit" class="btn" value="Добавить"/>
-			</div>
-			<div class="fav-list">
-				<div class="fav-list-item selected">
-					Основной список
-					<div class="fav-list-item-count">14 товаров</div>
-				</div>
-				<div class="fav-list-item">
-					Для кошек
-					<div class="fav-list-item-count">3 товара</div>
-				</div>
-				<div class="fav-list-item">
-					На потом
-					<div class="fav-list-item-count">7 товаров</div>
-				</div>
-			</div>
-			<div class="sub-cont"><input type="submit" class="btn btn_block" value="Сохранить"/></div>
-		</form>
-	</div>
-</div>
+//= _layer_login.html
+//= _layer_help.html
+//= _layer_call.html
+//= _layer_status.html
+//= _layer_quickview.html
+//= _layer_click.html
+//= _layer_favorite.html
 
 <!-- jquery -->
 <script src="static/js/jquery-1.10.1.min.js"></script>
