--- a/templates/card_not_avaliable.html
+++ b/templates/card_not_avaliable.html
@@ -62,20 +62,4 @@
 	</div>
 
 //= includes/_footer.html
-
-//= includes/_log_reg_layers.html
-
-<div class="layer" id="layer-remind">
-	<div class="layer-inner w240">
-		<h3>Сообщить о поступлении</h3>
-		<div class="layer-note">Каким способом вам сообщить<br/>о поступлении товара?</div>
-		<form>
-
-			<div class="label"><label for="f205">На e-mail:</label></div>
-			<input type="text" class="def-input" placeholder="" id="f205"/>
-			<div class="label"><label for="f105">По SMS:</label></div>
-			<input type="tel" class="def-input phone-mask" placeholder="+7 (111) 111-11-11" id="f105"/>
-			<div class="sub-cont"><input type="submit" class="btn btn_block" value="Сообщить"/></div>
-		</form>
-	</div>
-</div>
+//= includes/_layer_remind.html
